[gd_scene load_steps=12 format=3 uid="uid://6und51rwl0sc"]

[ext_resource type="Script" uid="uid://s6k3fisn578c" path="res://Scripts/main_menu.gd" id="1_1ehe0"]
[ext_resource type="Texture2D" uid="uid://veb426kh7nqq" path="res://sprites/BG's/pause menu.png" id="2_n45e2"]
[ext_resource type="PackedScene" uid="uid://b1158gm705e3j" path="res://Scenes/settings.tscn" id="3_n45e2"]
[ext_resource type="FontFile" uid="uid://dptwnn44g2d31" path="res://Fonts/ComicNeue-Bold.ttf" id="3_opfnp"]
[ext_resource type="Shader" uid="uid://bo7sem5soor4h" path="res://Shaders/crt.gdshader" id="5_opfnp"]
[ext_resource type="Texture2D" uid="uid://bh4c4n0d3smfx" path="res://sprites/back.png" id="6_cp0ys"]
[ext_resource type="Texture2D" uid="uid://b58jyhx0o3o7o" path="res://sprites/BG's/black.png" id="6_opfnp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cp0ys"]
shader = ExtResource("5_opfnp")
shader_parameter/resolution = Vector2(320, 180)
shader_parameter/scan_line_amount = 1.0
shader_parameter/warp_amount = 0.0
shader_parameter/noise_amount = 0.0
shader_parameter/interference_amount = 0.2
shader_parameter/grille_amount = 0.2
shader_parameter/grille_size = 0.5
shader_parameter/vignette_amount = 0.0
shader_parameter/vignette_intensity = 0.0
shader_parameter/aberation_amount = 0.0
shader_parameter/roll_line_amount = 0.0
shader_parameter/roll_speed = 4.0
shader_parameter/scan_line_strength = -8.0
shader_parameter/pixel_strength = -5.0

[sub_resource type="Animation" id="Animation_trj04"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PauseMenu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(160, 90)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Black:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(480, 90)]
}

[sub_resource type="Animation" id="Animation_yhxw7"]
resource_name = "save data"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PauseMenu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(160, 90), Vector2(-160, 90)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Black:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(480, 90), Vector2(160, 90)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_16hvj"]
_data = {
&"RESET": SubResource("Animation_trj04"),
&"save data": SubResource("Animation_yhxw7")
}

[node name="Main Menu" type="CanvasLayer"]
script = ExtResource("1_1ehe0")

[node name="PauseMenu" type="Sprite2D" parent="."]
position = Vector2(160, 90)
texture = ExtResource("2_n45e2")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.5
offset_top = -136.0
offset_right = -117.5
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_opfnp")
text = "START"
flat = true

[node name="Settings" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_opfnp")
text = "SETTINGS"
flat = true

[node name="Settings" parent="PauseMenu/VBoxContainer/Settings" instance=ExtResource("3_n45e2")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 16.0
offset_bottom = 8.0

[node name="Save data" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_opfnp")
text = "SAVE DATA"
flat = true

[node name="Black" type="Sprite2D" parent="."]
position = Vector2(480, 90)
texture = ExtResource("6_opfnp")

[node name="VBoxContainer" type="VBoxContainer" parent="Black"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.5
offset_top = -136.0
offset_right = -117.5
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2

[node name="Save1" type="Button" parent="Black/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_opfnp")
text = "SAVE 1"
flat = true

[node name="Save2" type="Button" parent="Black/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_opfnp")
text = "SAVE 2"
flat = true

[node name="Save3" type="Button" parent="Black/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_opfnp")
text = "SAVE 3"
flat = true

[node name="VBoxContainer2" type="VBoxContainer" parent="Black"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -245.0
offset_top = -136.0
offset_right = -160.0
offset_bottom = -44.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Del1" type="Button" parent="Black/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_opfnp")
text = "DELETE"
flat = true

[node name="Del2" type="Button" parent="Black/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_opfnp")
text = "DELETE"
flat = true

[node name="Del3" type="Button" parent="Black/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_opfnp")
text = "DELETE"
flat = true

[node name="Back" type="Sprite2D" parent="Black"]
position = Vector2(-130, 72)
scale = Vector2(1.55556, 1.66667)
texture = ExtResource("6_cp0ys")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="crt" type="ColorRect" parent="CanvasLayer"]
self_modulate = Color(0, 0, 0, 1)
top_level = true
material = SubResource("ShaderMaterial_cp0ys")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(77.348, 56.906, 0, 0)
metadata/_edit_group_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_16hvj")
}

[connection signal="pressed" from="PauseMenu/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Save data" to="." method="_on_save_data_pressed"]
[connection signal="pressed" from="Black/VBoxContainer/Save1" to="." method="_on_save_1_pressed"]
[connection signal="pressed" from="Black/VBoxContainer/Save2" to="." method="_on_save_2_pressed"]
[connection signal="pressed" from="Black/VBoxContainer/Save3" to="." method="_on_save_3_pressed"]
[connection signal="pressed" from="Black/VBoxContainer2/Del1" to="." method="_on_del_1_pressed"]
[connection signal="pressed" from="Black/VBoxContainer2/Del2" to="." method="_on_del_2_pressed"]
[connection signal="pressed" from="Black/VBoxContainer2/Del3" to="." method="_on_del_3_pressed"]
